--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/net.dreamlu/mica-http -->
+        <dependency>
+            <groupId>net.dreamlu</groupId>
+            <artifactId>mica-http</artifactId>
+            <version>2.4.2-GA</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
